<resources>
    <string name="app_name">mini_jeu_calcul</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>

    <string name="bouton_0" translatable="false">0</string>
    <string name="bouton_1" translatable="false">1</string>
    <string name="bouton_2" translatable="false">2</string>
    <string name="bouton_3" translatable="false">3</string>
    <string name="bouton_4" translatable="false">4</string>
    <string name="bouton_5" translatable="false">5</string>
    <string name="bouton_6" translatable="false">6</string>
    <string name="bouton_7" translatable="false">7</string>
    <string name="bouton_8" translatable="false">8</string>
    <string name="bouton_9" translatable="false">9</string>
    <string name="bouton_plus" translatable="false">+</string>
    <string name="bouton_moins" translatable="false">-</string>
    <string name="bouton_fois" translatable="false">*</string>
    <string name="bouton_divise" translatable="false">/</string>
    <string name="TEXT_HELLO_WORLD">Hello World</string>
    <string name="TEXT_BOUTON_HIGH_SCORE">tableau score</string>
    <string name="TEXT_BOUTON_RESET">Reset</string>
    <string name="TEXT_BOUTON_CALCULER">Calculer</string>
    <string name="ERROR_TYPE_OPERATION">deja saisi</string>

    <string name="text_mon_textview">Je clique sur mon bouton</string>

</resources>